--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,6 +19,6 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="KHS ONLINE "
+        android:text="KOPERTAIS "
         android:layout_marginBottom="4dp"/>
 </RelativeLayout>
