--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,16 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    >
 
-    <ImageView
-        android:layout_marginTop="48dp"
-        android:id="@+id/img_logo"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:src="@drawable/ic_logo" />
+
 
     <TextView
         fontPath="fonts/montserrat_bold.ttf"
@@ -20,7 +16,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="KHS-Online"
+        android:text="KOPERTAIS"
         android:textColor="@color/biru_tua"
         android:textSize="35dp"
         android:textStyle="bold" />
@@ -28,7 +24,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_logo"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:padding="16dp">
