--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="stmik.andy.khsonline.AdminActivity">
+    tools:context="uinbdg.skripsi.kopertais.AdminActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Admin"
+                        android:text="PEGAWAI"
                         android:textSize="20dp" />
                 </LinearLayout>
             </LinearLayout>
@@ -62,7 +62,7 @@
                 app:cardUseCompatPadding="true">
 
                 <RelativeLayout
-                    android:id="@+id/btn_admin"
+                    android:id="@+id/btn_univ"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_gradient"
@@ -74,7 +74,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:padding="8dp"
-                        android:src="@drawable/ic_admin"
+                        android:src="@drawable/ic_class"
                         android:tint="@color/md_white_1000" />
 
                     <TextView
@@ -84,7 +84,7 @@
                         android:layout_centerInParent="true"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Master Admin"
+                        android:text="UNIVERSITAS"
                         android:textColor="@color/md_white_1000" />
 
                 </RelativeLayout>
@@ -99,7 +99,7 @@
                 app:cardUseCompatPadding="true">
 
                 <RelativeLayout
-                    android:id="@+id/btn_mahasiswa"
+                    android:id="@+id/btn_perjalanan"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
@@ -124,7 +124,7 @@
                         android:layout_centerInParent="true"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Master Mahasiswa"
+                        android:text="PERJALANAN"
                         android:textColor="@color/md_white_1000" />
 
 
@@ -142,7 +142,7 @@
                 app:cardUseCompatPadding="true">
 
                 <RelativeLayout
-                    android:id="@+id/btn_kelas"
+                    android:id="@+id/btn_exit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_gradient"
@@ -154,7 +154,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:padding="8dp"
-                        android:src="@drawable/ic_class"
+                        android:src="@drawable/ic_exit_to_app_black_24dp"
                         android:tint="@color/md_white_1000" />
 
                     <TextView
@@ -164,7 +164,7 @@
                         android:layout_centerInParent="true"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Master Kelas"
+                        android:text="EXIT"
                         android:textColor="@color/md_white_1000" />
 
 
@@ -173,167 +173,6 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:theme="@style/SelectableItemBackground"
-                app:cardCornerRadius="2dp"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:id="@+id/btn_kuliah"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bg_gradient"
-                    android:clickable="true"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/img_kuliah"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_matkul"
-                        android:tint="@color/md_white_1000" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/img_kuliah"
-                        android:layout_centerInParent="true"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Master Kuliah"
-                        android:textColor="@color/md_white_1000" />
-
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:theme="@style/SelectableItemBackground"
-                app:cardCornerRadius="2dp"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:id="@+id/btn_dosen"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bg_gradient"
-                    android:clickable="true"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/img_dosen"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_dosen"
-                        android:tint="@color/md_white_1000" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/img_dosen"
-                        android:layout_centerInParent="true"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Master Dosen"
-                        android:textColor="@color/md_white_1000" />
-
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:theme="@style/SelectableItemBackground"
-                app:cardCornerRadius="2dp"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:id="@+id/btn_tentang"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bg_gradient"
-                    android:clickable="true"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/img_tentang"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_about"
-                        android:tint="@color/md_white_1000" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/img_tentang"
-                        android:layout_centerInParent="true"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Tentang"
-                        android:textColor="@color/md_white_1000" />
-
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:theme="@style/SelectableItemBackground"
-                app:cardCornerRadius="2dp"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:id="@+id/btn_bantuan"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bg_gradient"
-                    android:clickable="true"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/img_bantuan"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_admin"
-                        android:tint="@color/md_white_1000" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/img_bantuan"
-                        android:layout_centerInParent="true"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Bantuan"
-                        android:textColor="@color/md_white_1000" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
     </LinearLayout>
 </ScrollView>
